src/app/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

body {
  color: theme('colors.secondary');
  background: theme('colors.background');
  @apply text-sm sm:text-base;
}

.prose a:not(.anchor) {
  @apply text-accent no-underline hover:underline;
}

.prose a.anchor {
  @apply no-underline;
}

.prose pre {
  @apply overflow-x-auto;
}

.prose code:not(pre code) {
  @apply px-1 py-0.5 text-sm border border-border text-primary;
}

.prose code:not(pre code)::before,
.prose code:not(pre code)::after {
  content: none;
}

.prose pre code {
  @apply py-4 px-2 block bg-transparent text-xs sm:text-sm;
  border: initial;
  line-height: 1.8;
  counter-reset: line;
}

.prose pre code [data-line] {
  @apply inline-block w-full pr-2;
}

.prose pre code [data-line]::before {
  counter-increment: line;
  content: counter(line);
  @apply hidden sm:inline-block w-8 mr-6 text-right text-muted;
}

